fix the extra space from bottom in main dashbaord page

--- a/src/Styles/dashboard/createlist.css
+++ b/src/Styles/dashboard/createlist.css
@@ -9,7 +9,6 @@
   -webkit-backdrop-filter: blur(30.5px);
   backdrop-filter: blur(30.5px);
   margin: 50px 0px;
-  margin-bottom: 250px;
 }
 .user-form-for-list option {
   color: white;
