--- a/src/Styles/dashboard/csvlist.css
+++ b/src/Styles/dashboard/csvlist.css
@@ -12,7 +12,6 @@
   -webkit-backdrop-filter: blur(30.5px);
   backdrop-filter: blur(30.5px);
   margin: 50px 0px;
-  margin-bottom: 250px;
 }
 .input-div-for-csv {
   /* border: 1px solid rgb(198, 10, 250); */
