--- a/src/Styles/dashboard/maindashboard.css
+++ b/src/Styles/dashboard/maindashboard.css
@@ -4,10 +4,11 @@
   background-repeat: no-repeat;
   /* background: #000000; */
   background-size: cover;
-
   color: white;
 }
-
+.same-dash-main-m {
+  margin: 200px 0px;
+}
 .title-div-dashboard h3 {
   padding-top: -5px;
   padding-bottom: 15px;
@@ -26,7 +27,7 @@
   border: 1px solid rgba(255, 255, 255, 0.563);
   border: none;
   border-radius: 10px;
-  margin: 0px 300px;
+  margin: 20px 300px;
 }
 
 .images-in-this img {
